--- a/html/advert_list.html
+++ b/html/advert_list.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./user_list.html">
+                    <a href="user/list.html">
                         <i class="fa fa-bell"></i>
                         用户管理
                     </a>
