--- a/html/course/add_step2.html
+++ b/html/course/add_step2.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./user_list.html">
+                    <a href="../user/list.html">
                         <i class="fa fa-bell"></i>
                         用户管理
                     </a>
@@ -49,29 +49,29 @@
                     </a>
                     <ul class="list-unstyled" style="display: block;">
                         <li>
-                            <a href="./course_add.html" class="active">
+                            <a href="add.html" class="active">
                                  课程添加
                             </a>
                         </li>
                         <li>
-                            <a href="./course_list.html">
+                            <a href="list.html">
                                 课程列表
                             </a>
                         </li>
                         <li>
-                            <a href="./course_category.html">
+                            <a href="category.html">
                                 课程分类
                             </a>
                         </li>
                         <li>
-                            <a href="./course_topic.html">
+                            <a href="topic.html">
                                 课程专题
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="./advert_list.html">
+                    <a href="../advert_list.html">
                         <i class="fa fa-bell"></i>
                         广告管理
                     </a>
@@ -117,7 +117,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./settings.html">
+                            <a href="../home/settings.html">
                                 <i class="fa fa-user"></i>
                                 个人中心
                             </a>
@@ -157,19 +157,19 @@
                     <!-- 步聚 -->
                     <ul class="forwards list-unstyled">
                         <li>
-                            <a href="./course_add_step1.html" class="done">
+                            <a href="add_step1.html" class="done">
                             <b class="fa fa-check"></b>
                             基本信息
                             </a>
                         </li>
                         <li>
-                            <a href="./course_add_step2.html" class="active">
+                            <a href="./add_step2.html" class="active">
                             <b>2</b>
                             课程图片
                             </a>
                         </li>
                         <li>
-                            <a href="./course_add_step3.html">
+                            <a href="add_step3.html">
                             <b>3</b>
                             课时管理
                             </a>
@@ -190,7 +190,7 @@
                                 可上传jpg, gif, png格式文件, 图片建议尺寸大于300x150，文件大小不能超过2M。
                             </p>
                             <div class="col-xs-2">
-                                <a href="./course_add_step3.html" class="btn btn-success btn-sm">选择图片</a>
+                                <a href="add_step3.html" class="btn btn-success btn-sm">选择图片</a>
                             </div>
                             <div class="col-xs-2">
                                 <a href="javascript:;" class="btn btn-warning btn-sm" disabled>裁切图片</a>
