--- a/html/home/repass.html
+++ b/html/home/repass.html
@@ -24,19 +24,19 @@
         <div class="navs">
             <ul class="list-unstyled">
                 <li>
-                    <a href="./index.html">
+                    <a href="./index.html" class="active">
                         <i class="fa fa-home"></i>
                         仪表盘
                     </a>
                 </li>
                 <li>
-                    <a href="./user_list.html">
+                    <a href="../user/list.html">
                         <i class="fa fa-bell"></i>
                         用户管理
                     </a>
                 </li>
                 <li>
-                    <a href="./teacher_list.html">
+                    <a href="../teacher/list.html">
                         <i class="fa fa-bell"></i>
                         讲师管理
                     </a>
@@ -47,7 +47,7 @@
                         课程管理
                         <i class="arrow fa fa-angle-right"></i>
                     </a>
-                    <ul class="list-unstyled" style="display: block;">
+                    <ul class="list-unstyled">
                         <li>
                             <a href="./course_add.html">
                                  课程添加
@@ -64,14 +64,14 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./course_topic.html" class="active">
+                            <a href="./course_topic.html">
                                 课程专题
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="./advert_list.html">
+                    <a href="../advert_list.html">
                         <i class="fa fa-bell"></i>
                         广告管理
                     </a>
@@ -117,7 +117,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./settings.html">
+                            <a href="settings.html">
                                 <i class="fa fa-user"></i>
                                 个人中心
                             </a>
@@ -136,13 +136,35 @@
                     </ul>
                 </nav>          
             </div>
-            <div class="body course-topic">
-                <!-- 面包屑 -->
-                <ol class="breadcrumb">
-                    <li><a href="javascript:;">课程管理</a></li>
-                    <li class="active">课程专题</li>
-                </ol>
-                <h3>敬请期待...</h3>
+            <!-- 修改密码 -->
+            <div class="body">
+                <div class="repass">
+                    <form action="" class="form-horizontal col-xs-offset-2">
+                        <div class="form-group">
+                            <label for="" class="col-xs-3 control-label">原密码</label>
+                            <div class="col-xs-4">
+                                <input type="text" class="form-control input-sm">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="" class="col-xs-3 control-label">新密码</label>
+                            <div class="col-xs-4">
+                                <input type="password" class="form-control input-sm">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="" class="col-xs-3 control-label">确认密码</label>
+                            <div class="col-xs-4">
+                                <input type="text" class="form-control input-sm">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-xs-7">
+                                <input type="submit" class="btn btn-success btn-sm pull-right" value=" 修 改 ">
+                            </div>                          
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
