--- a/html/home/settings.html
+++ b/html/home/settings.html
@@ -30,13 +30,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./user_list.html">
+                    <a href="../user/list.html">
                         <i class="fa fa-bell"></i>
                         用户管理
                     </a>
                 </li>
                 <li>
-                    <a href="./teacher_list.html">
+                    <a href="../teacher/list.html">
                         <i class="fa fa-bell"></i>
                         讲师管理
                     </a>
@@ -71,7 +71,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="./advert_list.html">
+                    <a href="../advert_list.html">
                         <i class="fa fa-bell"></i>
                         广告管理
                     </a>
@@ -226,7 +226,7 @@
                         <div class="form-group">
                             <div class="col-xs-8">
                                 <a href="./course_add_step2.html" class="btn btn-success btn-sm pull-right">保 存</a>
-                                <a href="./repass.html" class="btn btn-link btn-sm pull-right">更改密码？</a>
+                                <a href="repass.html" class="btn btn-link btn-sm pull-right">更改密码？</a>
                             </div>
                         </div>
                     </form>
