--- a/html/teacher/add.html
+++ b/html/teacher/add.html
@@ -30,13 +30,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./user_list.html">
+                    <a href="../user/list.html">
                         <i class="fa fa-bell"></i>
                         用户管理
                     </a>
                 </li>
                 <li>
-                    <a href="./teacher_list.html">
+                    <a href="list.html" class="active">
                         <i class="fa fa-bell"></i>
                         讲师管理
                     </a>
@@ -47,31 +47,31 @@
                         课程管理
                         <i class="arrow fa fa-angle-right"></i>
                     </a>
-                    <ul class="list-unstyled" style="display: block;">
+                    <ul class="list-unstyled">
                         <li>
-                            <a href="./course_add.html" class="active">
+                            <a href="../course_add.html">
                                  课程添加
                             </a>
                         </li>
                         <li>
-                            <a href="./course_list.html">
+                            <a href="../course_list.html">
                                 课程列表
                             </a>
                         </li>
                         <li>
-                            <a href="./course_category.html">
+                            <a href="../course_category.html">
                                 课程分类
                             </a>
                         </li>
                         <li>
-                            <a href="./course_topic.html">
+                            <a href="../course_topic.html">
                                 课程专题
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="./advert_list.html">
+                    <a href="../advert_list.html">
                         <i class="fa fa-bell"></i>
                         广告管理
                     </a>
@@ -117,7 +117,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./settings.html">
+                            <a href="../settings.html">
                                 <i class="fa fa-user"></i>
                                 个人中心
                             </a>
@@ -136,31 +136,58 @@
                     </ul>
                 </nav>          
             </div>
-            <div class="body course-add">
+            <div class="body teacher">
                 <!-- 面包屑 -->
                 <ol class="breadcrumb">
-                    <li><a href="javascript:;">课程管理</a></li>
-                    <li class="active">课程添加</li>
+                    <li><a href="javascript:;">讲师管理</a></li>
+                    <li class="active">讲师添加</li>
                 </ol>
-                <div class="steps create">
-                    <div class="title">
-                        <h5>创建课程 <small>CREATE A COURSE</small></h5>
-                    </div>
-                    <form action="" class="form-horizontal col-xs-7">
+                <div class="teacher-add">
+                    <form action="" class="form-horizontal col-xs-offset-2">
                         <div class="form-group">
-                            <label for="" class="col-xs-2 control-label">课程标题</label>
-                            <div class="col-xs-9">
-                                <input type="text" class="form-control input-sm" placeholder="请填写课程标题">
+                            <label for="" class="col-xs-3 control-label">姓名</label>
+                            <div class="col-xs-4">
+                                <input type="text" class="form-control input-sm" placeholder="讲师名称">
                             </div>
                         </div>
-                        <div class="col-xs-11">
-                            <a href="./course_add_step1.html" class="btn btn-success btn-sm pull-right">创建课程</a>
+                        <div class="form-group">
+                            <label for="" class="col-xs-3 control-label">密码</label>
+                            <div class="col-xs-4">
+                                <input type="password" class="form-control input-sm">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="" class="col-xs-3 control-label">入职时间</label>
+                            <div class="col-xs-4">
+                                <input type="text" class="form-control input-sm">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="" class="col-xs-3 control-label">类型</label>
+                            <div class="col-xs-2">
+                                <select name="" class="form-control input-sm">
+                                    <option value="">讲师</option>
+                                    <option value="">管理员</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="" class="col-xs-3 control-label">性别</label>
+                            <div class="col-xs-4">
+                                <label class="radio-inline">
+                                    <input type="radio" checked> 男
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio"> 女
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-xs-7">
+                                <a href="../advert_list.html" class="btn btn-success btn-sm pull-right"> 添 加 </a>
+                            </div>                          
                         </div>
                     </form>
-                    <div class="extra col-xs-3">
-                        <h5>从视频专辑导入课程</h5>
-                        <p>已支持优酷、腾讯视频、网易公开课、爱奇艺教育的视频专辑导入。</p>
-                    </div>
                 </div>
             </div>
         </div>
