--- a/html/course/add_step1.html
+++ b/html/course/add_step1.html
@@ -30,13 +30,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./user_list.html">
+                    <a href="../user/list.html">
                         <i class="fa fa-bell"></i>
                         用户管理
                     </a>
                 </li>
                 <li>
-                    <a href="./teacher_list.html">
+                    <a href="../teacher/list.html">
                         <i class="fa fa-bell"></i>
                         讲师管理
                     </a>
@@ -49,29 +49,29 @@
                     </a>
                     <ul class="list-unstyled" style="display: block;">
                         <li>
-                            <a href="./course_add.html">
+                            <a href="add.html" class="active">
                                  课程添加
                             </a>
                         </li>
                         <li>
-                            <a href="./course_list.html">
+                            <a href="list.html">
                                 课程列表
                             </a>
                         </li>
                         <li>
-                            <a href="./course_category.html" class="active">
+                            <a href="category.html">
                                 课程分类
                             </a>
                         </li>
                         <li>
-                            <a href="./course_topic.html">
+                            <a href="topic.html">
                                 课程专题
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="./advert_list.html">
+                    <a href="../advert_list.html">
                         <i class="fa fa-bell"></i>
                         广告管理
                     </a>
@@ -117,7 +117,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./settings.html">
+                            <a href="../home/settings.html">
                                 <i class="fa fa-user"></i>
                                 个人中心
                             </a>
@@ -136,56 +136,99 @@
                     </ul>
                 </nav>          
             </div>
-            <div class="body course-category">
+            <div class="body course-add">
                 <!-- 面包屑 -->
                 <ol class="breadcrumb">
                     <li><a href="javascript:;">课程管理</a></li>
-                    <li class="active">课程分类</li>
+                    <li class="active">课程添加</li>
                 </ol>
-                <div class="category-add">
-                    <form action="" class="form-horizontal">
-                        <div class="form-group">
-                            <label for="" class="col-xs-4 control-label">名称</label>
-                            <div class="col-xs-3">
-                                <input type="text" class="form-control input-sm" placeholder="填写分类名称">
+                <div class="steps">
+                    <!-- 摘要 -->
+                    <div class="brief">
+                        <div class="thumb">
+                            <img src="./uploads/course.png" alt="">
+                        </div>
+                        <dl class="info">
+                            <dt>Git 指南</dt>
+                            <dd>讲师：李鹏周</dd>
+                            <dd>课时：32</dd>
+                        </dl>
+                    </div>
+                    <!-- 步聚 -->
+                    <ul class="forwards list-unstyled">
+                        <li>
+                            <a href="./add_step1.html" class="active">
+                            <b>1</b>
+                            基本信息
+                            </a>
+                        </li>
+                        <li>
+                            <a href="add_step2.html">
+                            <b>2</b>
+                            课程图片
+                            </a>
+                        </li>
+                        <li>
+                            <a href="add_step3.html">
+                            <b>3</b>
+                            课时管理
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- 基本信息 -->
+                    <div class="content">
+                        <!-- 标题 -->
+                        <div class="title">
+                            <h5>基本信息 <small>BASIC INFORMATION</small></h5>
+                        </div>
+                        <form action="" class="basic form-horizontal">
+                            <div class="form-group">
+                                <label for="" class="col-xs-2 control-label">标题</label>
+                                <div class="col-xs-8">
+                                    <input type="text" class="form-control input-sm" value="Git指南">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-4 control-label">级别</label>
-                            <div class="col-xs-2">
-                                <select name="" class="form-control input-sm">
-                                    <option value="">顶级分类</option>
-                                    <option value="">前端开发</option>
-                                    <option value="">后端开发</option>
-                                    <option value="">数据库</option>
-                                    <option value="">云计算&大数据</option>
-                                    <option value="">视觉设计</option>
-                                </select>
+                            <div class="form-group">
+                                <label for="" class="col-xs-2 control-label">课程描述</label>
+                                <div class="col-xs-8 ckeditor">
+                                    <textarea name="" rows="15" class="form-control input-sm"></textarea>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-4 control-label">排序</label>
-                            <div class="col-xs-1">
-                                <input type="text" class="form-control input-sm" value="10">
+                            <div class="form-group">
+                                <label for="" class="col-xs-2 control-label">讲师</label>
+                                <div class="col-xs-8">
+                                    <select name="" class="form-control input-sm">
+                                        <option value="">李鹏周</option>
+                                        <option value="">汪磊</option>
+                                        <option value="">蒋坤</option>
+                                    </select>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="" class="col-xs-4 control-label">是否显示</label>
-                            <div class="col-xs-3">
-                                <label class="checkbox-inline">
-                                    <input type="checkbox" checked> 是
-                                </label>
-                                <label class="checkbox-inline">
-                                    <input type="checkbox"> 否
-                                </label>
+                            <div class="form-group">
+                                <label for="" class="col-xs-2 control-label">分类</label>
+                                <div class="col-xs-8">
+                                    <select name="" class="form-control input-sm">
+                                        <option value="">互联网</option>
+                                    </select>
+                                    <select name="" class="form-control input-sm">
+                                        <option value="">网页设计</option>
+                                    </select>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-xs-8">
-                                <a href="./course_category.html" class="btn btn-success btn-sm pull-right">保存</a>
-                            </div>                          
-                        </div>
-                    </form>
+                            <div class="form-group">
+                                <label for="" class="col-xs-2 control-label">标签</label>
+                                <div class="col-xs-8">
+                                    <input type="text" class="form-control input-sm">
+                                    <p class="help-block">将会应用于按标签搜索课程、相关课程的提取等</p>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-xs-10">
+                                    <a href="add_step2.html" class="btn btn-success btn-sm pull-right">保 存</a>
+                                </div>                          
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
