--- a/html/course/category.html
+++ b/html/course/category.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./user_list.html">
+                    <a href="../user/list.html">
                         <i class="fa fa-bell"></i>
                         用户管理
                     </a>
@@ -49,29 +49,29 @@
                     </a>
                     <ul class="list-unstyled" style="display: block;">
                         <li>
-                            <a href="./course_add.html">
+                            <a href="add.html">
                                  课程添加
                             </a>
                         </li>
                         <li>
-                            <a href="./course_list.html">
+                            <a href="list.html">
                                 课程列表
                             </a>
                         </li>
                         <li>
-                            <a href="./course_category.html" class="active">
+                            <a href="./category.html" class="active">
                                 课程分类
                             </a>
                         </li>
                         <li>
-                            <a href="./course_topic.html">
+                            <a href="topic.html">
                                 课程专题
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="./advert_list.html">
+                    <a href="../advert_list.html">
                         <i class="fa fa-bell"></i>
                         广告管理
                     </a>
@@ -117,7 +117,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./settings.html">
+                            <a href="../home/settings.html">
                                 <i class="fa fa-user"></i>
                                 个人中心
                             </a>
@@ -143,7 +143,7 @@
                     <li class="active">课程分类</li>
                 </ol>
                 <div class="page-title">
-                    <a href="./course_category_add.html" class="btn btn-success btn-sm pull-right">添加分类</a>
+                    <a href="category_add.html" class="btn btn-success btn-sm pull-right">添加分类</a>
                 </div>
                 <div class="panel panel-default">
                     <table class="table table-bordered">
@@ -163,7 +163,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -172,7 +172,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -181,7 +181,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -190,7 +190,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr class="active">
@@ -199,7 +199,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -208,7 +208,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -217,7 +217,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr class="active">
@@ -226,7 +226,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -235,7 +235,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -244,7 +244,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -253,7 +253,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr class="active">
@@ -262,7 +262,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -271,7 +271,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -280,7 +280,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr class="active">
@@ -289,7 +289,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                             <tr>
@@ -298,7 +298,7 @@
                                 <td>是</td>
                                 <td>10</td>
                                 <td>
-                                    <a href="./course_category_add.html" class="btn btn-info btn-xs">编辑</a>
+                                    <a href="category_add.html" class="btn btn-info btn-xs">编辑</a>
                                 </td>
                             </tr>
                         </tbody>
