--- a/html/course/list.html
+++ b/html/course/list.html
@@ -48,29 +48,29 @@
                     </a>
                     <ul class="list-unstyled" style="display: block;">
                         <li>
-                            <a href="./course_add.html">
+                            <a href="add.html">
                                  课程添加
                             </a>
                         </li>
                         <li>
-                            <a href="./course_list.html" class="active">
+                            <a href="./list.html" class="active">
                                 课程列表
                             </a>
                         </li>
                         <li>
-                            <a href="./course_category.html">
+                            <a href="category.html">
                                 课程分类
                             </a>
                         </li>
                         <li>
-                            <a href="./course_topic.html">
+                            <a href="topic.html">
                                 课程专题
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="./advert_list.html">
+                    <a href="../advert_list.html">
                         <i class="fa fa-bell"></i>
                         广告管理
                     </a>
@@ -116,7 +116,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./settings.html">
+                            <a href="../home/settings.html">
                                 <i class="fa fa-user"></i>
                                 个人中心
                             </a>
