--- a/html/user/list.html
+++ b/html/user/list.html
@@ -30,13 +30,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./user_list.html" class="active">
+                    <a href="./list.html" class="active">
                         <i class="fa fa-bell"></i>
                         用户管理
                     </a>
                 </li>
                 <li>
-                    <a href="./teacher_list.html">
+                    <a href="../teacher/list.html">
                         <i class="fa fa-bell"></i>
                         讲师管理
                     </a>
@@ -49,29 +49,29 @@
                     </a>
                     <ul class="list-unstyled">
                         <li>
-                            <a href="./course_add.html">
+                            <a href="../course_add.html">
                                  课程添加
                             </a>
                         </li>
                         <li>
-                            <a href="./course_list.html">
+                            <a href="../course_list.html">
                                 课程列表
                             </a>
                         </li>
                         <li>
-                            <a href="./course_category.html">
+                            <a href="../course_category.html">
                                 课程分类
                             </a>
                         </li>
                         <li>
-                            <a href="./course_topic.html">
+                            <a href="../course_topic.html">
                                 课程专题
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="./advert_list.html">
+                    <a href="../advert_list.html">
                         <i class="fa fa-bell"></i>
                         广告管理
                     </a>
@@ -117,7 +117,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./settings.html">
+                            <a href="../home/settings.html">
                                 <i class="fa fa-user"></i>
                                 个人中心
                             </a>
@@ -199,7 +199,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -215,7 +215,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -231,7 +231,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -247,7 +247,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -263,7 +263,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -279,7 +279,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -295,7 +295,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -311,7 +311,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -327,7 +327,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -343,7 +343,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -359,7 +359,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -375,7 +375,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -391,7 +391,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -407,7 +407,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
@@ -423,7 +423,7 @@
                                 <td>2016/05/01 10:12:32</td>
                                 <td>2016/05/10 12:16:19</td>
                                 <td>
-                                    <a href="./user_profile.html" class="btn btn-info btn-xs">查看</a>
+                                    <a href="profile.html" class="btn btn-info btn-xs">查看</a>
                                     <a href="javascript::" class="btn btn-warning btn-xs">锁定</a>
                                 </td>
                             </tr>
