--- a/html/common/aside.html
+++ b/html/common/aside.html
@@ -4,7 +4,8 @@
     <div class="profile">
         <!-- 头像 -->
         <div class="avatar img-circle">
-            <img src="./uploads/avatar.jpg">
+            <!--<img src="./uploads/avatar.jpg">-->
+            <img src="">
         </div>
         <h4>布头儿</h4>
     </div>
@@ -12,19 +13,19 @@
     <div class="navs">
         <ul class="list-unstyled">
             <li>
-                <a href="../../index.html" class="active">
+                <a href="/" class="active">
                     <i class="fa fa-home"></i>
                     仪表盘
                 </a>
             </li>
             <li>
-                <a href="../user/list.html">
+                <a href="/html/user/list.html">
                     <i class="fa fa-bell"></i>
                     用户管理
                 </a>
             </li>
             <li>
-                <a href="../teacher/list.html">
+                <a href="/html/teacher/list.html">
                     <i class="fa fa-bell"></i>
                     讲师管理
                 </a>
@@ -37,52 +38,28 @@
                 </a>
                 <ul class="list-unstyled">
                     <li>
-                        <a href="../course/add.html">
+                        <a href="/html/course/add.html">
                             课程添加
                         </a>
                     </li>
                     <li>
-                        <a href="../course/list.html">
+                        <a href="/html/course/list.html">
                             课程列表
                         </a>
                     </li>
                     <li>
-                        <a href="../course/category.html">
+                        <a href="/html/course/category.html">
                             课程分类
                         </a>
                     </li>
                     <li>
-                        <a href="../topic.html">
+                        <a href="/html/course/topic.html">
                             课程专题
                         </a>
                     </li>
                 </ul>
             </li>
-            <li>
-                <a href="javascript:;">
-                    <i class="fa fa-bell"></i>
-                    广告管理
-                </a>
-            </li>
-            <li>
-                <a href="javascript:;">
-                    <i class="fa fa-cog"></i>
-                    系统设置
-                    <i class="arrow fa fa-angle-right"></i>
-                </a>
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="javascript:;">
-                            网站设置
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:;">
-                            权限管理
-                        </a>
-                    </li>
-                </ul>
-            </li>
+
         </ul>
     </div>
 </div>
