--- a/html/common/script.html
+++ b/html/common/script.html
@@ -1,2 +1,2 @@
-<script src="/lib/requirejs/require.min.js" data-main='/js/main.js'></script>
+<script src="/lib/requirejs/require.min.js" data-main='/js/common/main.js'></script>
 
