ajax的loading&左侧导航栏的选中切换&操作历史记录页面进度条

--- a/html/course/category_add.html
+++ b/html/course/category_add.html
@@ -69,6 +69,7 @@
         </div>
     </div>
 
+    <?php include('../common/ajax_loading.html')?>
     <?php include('../common/script.html')?>
 </body>
 </html>
