--- a/html/common/style.html
+++ b/html/common/style.html
@@ -1,4 +1,5 @@
 <!--这里的路径要写绝对的路径，因为这个是所有的页面都要用的-->
 <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.css">
+<link rel="stylesheet" href="/lib/nprogress/nprogress.css">
 <link rel="stylesheet" href="/less/index.css">
