--- a/html/course/add_step1.html
+++ b/html/course/add_step1.html
@@ -112,6 +112,7 @@
         </div>
     </div>
 
+    <?php include('../common/ajax_loading.html')?>
     <?php include('../common/script.html')?>
 </body>
 </html>
