--- a/html/course/add_step2.html
+++ b/html/course/add_step2.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </div>
-
+    <?php include('../common/ajax_loading.html')?>
     <?php include('../common/script.html')?>
 </body>
 </html>
