--- a/html/course/add_step3.html
+++ b/html/course/add_step3.html
@@ -188,6 +188,7 @@
         </div>
     </div>
 
+    <?php include('../common/ajax_loading.html')?>
     <?php include('../common/script.html')?>
 </body>
 </html>
