--- a/html/course/category.html
+++ b/html/course/category.html
@@ -186,6 +186,8 @@
         </div>
     </div>
 
+
+    <?php include('../common/ajax_loading.html')?>
     <?php include('../common/script.html')?>
 </body>
 </html>
