--- a/html/course/list.html
+++ b/html/course/list.html
@@ -192,6 +192,7 @@
         </div>
     </div>
 
+    <?php include('../common/ajax_loading.html')?>
     <?php include('../common/script.html')?>
 </body>
 </html>
