--- a/html/home/login.html
+++ b/html/home/login.html
@@ -10,7 +10,7 @@
     <div class="login">
         <div class="login-wrap">
             <div class="avatar">
-                <img src="./uploads/monkey.png" class="img-circle" alt="">
+                <img src="" class="img-circle" alt="">
             </div>
             <form action="" class="col-xs-offset-1 col-xs-10" id="form-login">
                 <div class="input-group input-group-lg">
@@ -30,6 +30,7 @@
         </div>
     </div>
 
+    <?php include('../common/ajax_loading.html')?>
     <?php include('../common/script.html')?>
 </body>
 </html>
