--- a/html/teacher/list.html
+++ b/html/teacher/list.html
@@ -119,6 +119,7 @@
         </div>
     </div>
 
+    <?php include('../common/ajax_loading.html')?>
     <?php include('../common/script.html')?>
 </body>
 </html>
