--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             </div>
         </div>
     </div>
+
+    <?php include('./html/common/ajax_loading.html')?>
     <?php include('./html/common/script.html')?>
 </body>
 </html>
